name:                minesweeper
version:             0.1.0.0
synopsis:            First Assignment of FFPiHaskell 2017
description:         minesweeper porject
homepage:            https://github.com/lschulte2/Minesweeper
license:             BSD3
license-file:        LICENSE
author:              Lukas Schulte
maintainer:          lschulte@techfak.uni-bielefeld.de
copyright:           2017 Lukas Schulte
category:            cli
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


-- library for all things common in all exercises/not neccessary for students
-- to solve assignments
library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , GameLogic
                     , GameTypes
                     , GameConfig
                     , GameDraw
                     , GameParser
                     , GameLog
                     , PngToPic
                     , Ball
  build-depends:       base >= 4.7 && < 5
                     , IfElse
                     , lens
                     , linear
                     , containers
                     , array
                     , mtl
                     , gloss
                     , random-1.1
                     , data-default
                     , attoparsec
                     , bytestring
                     , transformers
                     , directory
                     , repa
                     , JuicyPixels
                     , JuicyPixels-repa
  default-language:    Haskell2010

executable Game
  hs-source-dirs:      app
  main-is:             GameMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minesweeper
                     , IfElse
                     , lens
                     , linear
                     , containers
                     , array
                     , mtl
                     , random-1.1
                     , gloss
                     , directory
                     , bytestring
                     , attoparsec
                     , transformers
  default-language:    Haskell2010


test-suite Game-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Game-Spec.hs
  build-depends:       base
                     , minesweeper
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , linear
                     , containers
                     , array
                     , lens
                     , mtl
                     , random-1.1
                     , gloss
                     , data-default
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lschulte2/Minesweeper

